# Facial_Game_Controller

./: .gitignore  README.md
Controller/: CMakeLists.txt  Keys.h  webcam_face_pose_ex.cpp
Controller/OldVersions/: Keys.h  render_face.hpp  webcam_face_pose_ex.cpp
Controller/OldVersions/Ver1/: Keys.cpp
Controller/OldVersions/Ver2/: CMakeLists.txt
Controller/WorkingVersion/: .webcam_head_pose_ex.cpp.swp  Keys.cpp  webcam_head_pose_ex.cpp
Dosbox/: input-event-codes.h
Dosbox/FirstTry/: reader.c
Dosbox/FourthTry/: test.py
Dosbox/SecondTry/: create.c  redirect.sh  run.c  runthing.sh
Dosbox/ThirdTry/: testing.cpp
FaceDetect-dlib/: Solution_read_avi_mac.md  record-yehan.docx  webcam_face_pose_ex.cpp  ~$cord-yehan.docx
FaceDetect-dlib/TestRecord/: fpsData.xlsx  testDecreaseNumOfFace09122016.txt  testRecord02122016.txt  testRecord29112016.txt  testRecord30112016.txt  testRecordDDMMYY.txt  testSpeedUp13122016.txt  testSpeedUp14122016.txt
FaceDetect-dlib/dlib-headpose/: .webcam_head_pose_ex.cpp.swp  webcam_face_pose_ex_direction.cpp  webcam_face_pose_fast.cpp  webcam_head_pose.cpp  webcam_head_pose_ex.cpp
FaceDetect-dlib/dlib-original/: render_face.hpp  video_face_pose_ex.cpp  video_test_face_pose_ex.cpp  webcam_face_pose_ex copy.cpp  webcam_face_pose_ex_fast.cpp  webcam_face_pose_ex_test.cpp
Jack/: Notes.md  reader  reader.c  runProgs.sh  writer  writer.c
Jack/FirstTry/: writer.c
Jack/FourthTry/: create.sh  joystickTest.py  test.py  webcam_face_pose_ex.cpp
Jack/SecondTry/: run.c  runstuff.sh
Jack/ThirdTry/: create.c  dummy.txt  input.sh  run.sh  testing.c  testing.cpp  testing.sh  xdostuff.sh  xdostuffbackup.sh
RR/: RR.VC.VC.opendb
RR/CPP Talker Program/: shell.sh  (+1 more)
(+105 files in other folders)
